# multiagents

./: .env.example  .gitignore  README.md  docgen.py  pyproject.toml  sudoku.py
docs/: interactive_mode.md  meeting_workflow_improvements.md  multi_agent_components.md
notes/: project.md
scripts/: design_tool.py  redis_inspector.py  register_tool.py  reject_tool.py  run_multi_agent.py  run_phase1_tests.py  run_supervisor_parallel.py  run_with_registry.py
sessions/: interactive_agent.memory.jsonl
src/agent_llm/: __init__.py  _runner.py  agent.py  agents.py  bus.py  cli.py  cli_output.py  designer.py  llm.py  memory.py  reflection.py  serve_web.py  session.py  state_redis.py  tools.py  tools_custom.py  tools_sandbox.py  workspace.py
src/agent_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_llm/prompts/: tool_designer_system.txt
tests/: Untitled  test_agent.py  test_agents.py  test_memory.py  test_portability.py  test_reflection.py  test_session.py  test_state_redis.py  test_tools.py
tools/: README.md  proposals_log.jsonl  registry.json
tools/proposals/: grep_repo_proposal.json
